--- a/src/components/CustomerReviews.css
+++ b/src/components/CustomerReviews.css
@@ -42,7 +42,7 @@
 
 .review-box {
     /* min-width: 300px; */
-    padding: 1.5rem;
+    padding: 2rem;
     color: white;
     display: flex;
     flex-direction: column;
@@ -56,10 +56,27 @@
     /* hyphenate-limit-chars: auto; */
 }
 
+.review-header {
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    padding-bottom: 0.5rem;
+}
+
+.author-name {
+    font-size: large;
+    margin-block: 0;
+}
+
+.author-profession {
+    font-size: small;
+    margin-block: 0.5rem 1rem;
+    opacity: 0.8;
+}
+
 .review-image {
     width: 50px;
     height: 50px;
-    margin-inline: auto;
     padding-bottom: 0.5rem;
 }
 
