--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -2,6 +2,7 @@
     --glow-size: 0.4rem;
     --glow-space: 0.8rem;
     --grid-space: max(var(--glow-space), 3%, 3rem);
+    --color-text-muted: #e0d4de;
     padding-block: 1.5rem;
     box-sizing: border-box;
     --color-bg-reviews: #4b0d36;
@@ -11,7 +12,7 @@
 .reviews-title {
     font-size: clamp(1.5rem, 4vw, 2.25rem);
     margin-block-start: 0.5rem;
-    margin-block-end: 2rem;
+    margin-block-end: clamp(2.8rem, 5vw, 5rem);
     line-height: 1.3;
 }
 
@@ -72,7 +73,15 @@
     display: flex;
     align-items: center;
     gap: 1rem;
-    padding-bottom: 0.5rem;
+}
+
+.line {
+  display: block;
+  height: 1px;
+  border: 0;
+  border-top: 1px solid var(--color-text-muted);
+  margin: .5em 0;
+  padding: 0;
 }
 
 .author-name {
@@ -83,7 +92,7 @@
 .author-city {
     font-size: small;
     margin-block: 0.5rem 0;
-    opacity: 0.8;
+    color: var(--color-text-muted);
 }
 
 .review-image {
@@ -108,12 +117,14 @@
     min-height: 3em; /* Approximately 2 lines of text */
     display: flex;
     align-items: center;
+    font-size: 1.15rem;
 }
 
 .review-content {
     margin: 0;
     align-self: start;
     flex-grow: 1; /* takes remaining space */
+    color: var(--color-text-muted);
 }
 
 .review-author {
