style(reviews): change line color

--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -79,7 +79,7 @@
   display: block;
   height: 1px;
   border: 0;
-  border-top: 1px solid var(--color-text-muted);
+  border-top: 1px solid #6b375a;
   margin: .5em 0;
   padding: 0;
 }
