--- a/src/App.css
+++ b/src/App.css
@@ -364,6 +364,7 @@
   width: 100%;
   --global-content-max-width: 1260px;
   --primary-text-color-toned-down: #dbdbdb;
+  --border-radius-clickable: 10px;
   font-family: 'PT Sans', Arial, sans-serif;
   min-height: 100vh;
   display: flex;
