--- a/src/components/StageButton/StageButton.css
+++ b/src/components/StageButton/StageButton.css
@@ -12,6 +12,6 @@
     font-weight: 700;
     font-size: 1.1rem;
     letter-spacing: 3px;
-    padding: 1.2rem;
+    padding: 1.1rem 4rem 1.2rem;
     text-transform: uppercase;
 }
