--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -85,12 +85,12 @@
 }
 
 .author-name {
-    margin-block: 0;
+    margin-block: 0 .25rem;
 }
 
 .author-city {
     font-size: small;
-    margin-block: 0.5rem 0;
+    margin-block: 0;
     color: var(--color-text-light-purple);
 }
 
