--- a/src/components/UspList/UspList.css
+++ b/src/components/UspList/UspList.css
@@ -17,7 +17,7 @@
 }
 
 .usp-item-headline {
-    font-size: 1.5rem;
+    font-size: clamp(1.5rem, 5vw, 2.8rem);
     margin-block: 0;
 }
 
@@ -35,9 +35,4 @@
 /*     .usp-item.even {
         align-self: flex-end;
     } */
-
-    .usp-item-headline {
-        font-size: 3rem;
-
-    }
 }
