--- a/src/components/UspList/UspList.css
+++ b/src/components/UspList/UspList.css
@@ -19,12 +19,15 @@
 .usp-item-headline {
     font-size: clamp(1.5rem, 5vw, 2.8rem);
     margin-block: 0;
+    letter-spacing: 0.1ch;
+    margin-block: 1.2rem;
 }
 
 .usp-item-content {
     font-size: clamp(0.8rem, 3vw, 1.5rem);
     color: var(--color-text-light-purple);
     margin-block: 0.5rem;
+    line-height: 1.6;
 }
 
 @media (min-width: 768px) {
