style(LipstickModel): export styles to css file and remove pointer-events

--- a/src/components/LipstickModel/LipstickModel.css
+++ b/src/components/LipstickModel/LipstickModel.css
@@ -4,3 +4,10 @@
     width: 100%;
     z-index: 6;
 }
+
+#lipstick-canvas {
+    position: sticky;
+    inset: 0;
+    z-index: 7;
+    pointer-events: none;
+}
