--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -10,8 +10,7 @@
 
 .reviews-title {
     font-size: clamp(1.3rem, 4vw, 1.8rem);
-    margin-block-start: 0.5rem;
-    margin-block-end: clamp(2.8rem, 5vw, 5rem);
+    margin-block: 0 clamp(2.8rem, 6vw, 7rem);
     line-height: 1.3;
     font-weight: normal;
 }
