--- a/src/components/LipstickModel/LipstickModel.css
+++ b/src/components/LipstickModel/LipstickModel.css
@@ -1,6 +1,6 @@
 .lipstick-animation-wrapper {
     position: absolute;
-    height: 300vh;
+    height: 100%;
     width: 100%;
     z-index: 6;
 }
@@ -9,5 +9,4 @@
     position: sticky;
     inset: 0;
     z-index: 7;
-    pointer-events: none;
 }
