--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -8,13 +8,5 @@
     inset: 0;
     z-index: 1;
     height: 300dvh;
-}
-
-.home-hero-content {
-    position: relative;
-    z-index: 3;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    pointer-events: none;
 }
