--- a/src/components/StageText/StageText.css
+++ b/src/components/StageText/StageText.css
@@ -19,6 +19,7 @@
     hyphens: word;
     word-break: normal;
     letter-spacing: 2px;
+    color: var(--color-text-super-light-purple);
 }
 
 #copyright {
