--- a/src/components/CustomerReviews/CustomerReviews.css
+++ b/src/components/CustomerReviews/CustomerReviews.css
@@ -13,6 +13,7 @@
     margin-block: 0 clamp(2.8rem, 6vw, 7rem);
     line-height: 1.3;
     font-weight: normal;
+    color: var(--color-text-super-light-purple);
 }
 
 .reviews-grid {
@@ -85,6 +86,7 @@
 
 .author-name {
     margin-block: 0 .25rem;
+    color: var(--color-text-super-light-purple);
 }
 
 .author-city {
@@ -109,7 +111,7 @@
 .review-title {
     font-weight: 600;
     letter-spacing: 1px;
-    color: white;
+    color: var(--color-text-super-light-purple);
     margin: 0;
     align-self: start;
     flex-shrink: 0;
