--- a/src/components/StageButton/StageButton.css
+++ b/src/components/StageButton/StageButton.css
@@ -12,6 +12,18 @@
     font-weight: 700;
     font-size: 1.1rem;
     letter-spacing: 3px;
-    padding: 1.1rem 4rem 1.2rem;
+    padding: 1.2rem 2rem;
     text-transform: uppercase;
+    width: 100%;
+    pointer-events: auto;
+}
+
+.glow-on-hover:hover {
+    text-shadow: 0 0 4px #ce70a7;
+}
+
+@media (min-width: 600px) {
+    .stage-button {
+        width: max(60%, 250px);
+    }
 }
